# NavVis

./: CMakeLists.txt  README.md  package.sh
.github/workflows/: ci-cd.yml
Docker/arm/: deploy.Dockerfile  deploy.docker-compose.yml  dev.Dockerfile  dev.docker-compose.yml  env.Dockerfile  test.Dockerfile  test.docker-compose.yml
Docker/scripts/: deps.sh
Docker/x64/: deploy.Dockerfile  deploy.docker-compose.yml  dev.Dockerfile  dev.docker-compose.yml  env.Dockerfile  test.Dockerfile  test.docker-compose.yml
src/: main.cpp  rotate_image.h
test/: CMakeLists.txt  catch.hpp  catch_main.cpp  tests.cpp
